--- a/lesson-03.ipynb
+++ b/lesson-03.ipynb
@@ -12,9 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "\u001b[32m┌─────────────────────┐\n│ Welcome to lesson 3 │\n└─────────────────────┘\u001b[0m"
+    }
+   ],
    "source": [
     "from course_engine import start_lesson\n",
     "start_lesson(3)\n"
@@ -39,16 +47,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "checks": "",
     "exercise_number": 1,
     "expected": "Wyoming\n"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "<IPython.core.display.HTML object>",
+      "text/html": "<pre>Wyoming\n\n<span class=\"ansi-green-fg\" style=\"color: #4f4\">┌────────────────────────────────────────────┐\n│ </span><span class=\"ansi-green-fg\" style=\"color: #4f4\">✔ Your output looks correct</span><span class=\"ansi-green-fg\" style=\"color: #4f4\">                │\n│                                            │\n│ Good job! You have completed this exercise │\n└────────────────────────────────────────────┘</span>\n</pre>"
+     },
+     "metadata": {},
+     "execution_count": 2
+    }
+   ],
    "source": [
     "# Exercise 1\n",
-    "\n"
+    "import csv\n",
+    "winner=''\n",
+    "file = open('Data/state-animals.csv')\n",
+    "for state, animal in csv.reader(file):\n",
+    "    if state>winner:\n",
+    "        winner=state\n",
+    "print(winner)\n"
    ]
   },
   {
@@ -61,16 +85,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "checks": "",
     "exercise_number": 2,
     "expected": "Alabama\n"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "<IPython.core.display.HTML object>",
+      "text/html": "<pre>Alabama\n\n<span class=\"ansi-green-fg\" style=\"color: #4f4\">┌────────────────────────────────────────────┐\n│ </span><span class=\"ansi-green-fg\" style=\"color: #4f4\">✔ Your output looks correct</span><span class=\"ansi-green-fg\" style=\"color: #4f4\">                │\n│                                            │\n│ Good job! You have completed this exercise │\n└────────────────────────────────────────────┘</span>\n</pre>"
+     },
+     "metadata": {},
+     "execution_count": 13
+    }
+   ],
    "source": [
     "# Exercise 2\n",
-    "\n"
+    "import csv\n",
+    "winner='zzz'\n",
+    "file = open('Data/state-animals.csv')\n",
+    "for state, animal in csv.reader(file):\n",
+    "    if state<winner:\n",
+    "        winner=state\n",
+    "print(winner)\n"
    ]
   },
   {
@@ -87,15 +127,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "checks": "",
     "exercise_number": 3,
     "expected": "Virginia big-eared bat\n"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "<IPython.core.display.HTML object>",
+      "text/html": "<pre>Virginia big-eared bat\n\n<span class=\"ansi-green-fg\" style=\"color: #4f4\">┌────────────────────────────────────────────┐\n│ </span><span class=\"ansi-green-fg\" style=\"color: #4f4\">✔ Your output looks correct</span><span class=\"ansi-green-fg\" style=\"color: #4f4\">                │\n│                                            │\n│ Good job! You have completed this exercise │\n└────────────────────────────────────────────┘</span>\n</pre>"
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
    "source": [
     "# Exercise 3\n",
+    "import csv\n",
+    "winner=''\n",
+    "file = open('Data/state-animals.csv')\n",
+    "for state, animal in csv.reader(file):\n",
+    "    if len(animal)>len(winner):\n",
+    "        winner=animal\n",
+    "print (winner)\n",
+    "\n",
     "\n"
    ]
   },
@@ -109,16 +167,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "checks": "",
     "exercise_number": 4,
     "expected": "Orca\n"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "<IPython.core.display.HTML object>",
+      "text/html": "<pre>Orca\n\n<span class=\"ansi-green-fg\" style=\"color: #4f4\">┌────────────────────────────────────────────┐\n│ </span><span class=\"ansi-green-fg\" style=\"color: #4f4\">✔ Your output looks correct</span><span class=\"ansi-green-fg\" style=\"color: #4f4\">                │\n│                                            │\n│ Good job! You have completed this exercise │\n└────────────────────────────────────────────┘</span>\n</pre>"
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ],
    "source": [
     "# Exercise 4\n",
-    "\n"
+    "import csv\n",
+    "winner='xxxxxxxxxxxxxxxxxxxxxxxxxxx'\n",
+    "file = open('Data/state-animals.csv')\n",
+    "for state, animal in csv.reader(file):\n",
+    "    if len(animal)<len(winner):\n",
+    "        winner=animal\n",
+    "print (winner)\n"
    ]
   },
   {
@@ -132,16 +206,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "checks": "",
     "exercise_number": 5,
-    "expected": "Virginia big-eared bat\nVirginia\n"
+    "expected": "Virginia big-eared bat\nVirginia\n",
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "<IPython.core.display.HTML object>",
+      "text/html": "<pre>Virginia big-eared bat\nVirginia\n\n<span class=\"ansi-green-fg\" style=\"color: #4f4\">┌────────────────────────────────────────────┐\n│ </span><span class=\"ansi-green-fg\" style=\"color: #4f4\">✔ Your output looks correct</span><span class=\"ansi-green-fg\" style=\"color: #4f4\">                │\n│                                            │\n│ Good job! You have completed this exercise │\n└────────────────────────────────────────────┘</span>\n</pre>"
+     },
+     "metadata": {},
+     "execution_count": 3
+    }
+   ],
    "source": [
     "# Exercise 5\n",
-    "\n"
+    "import csv\n",
+    "file = open('Data/state-animals.csv')\n",
+    "winner='xxxxxxxx'\n",
+    "winstate=''\n",
+    "for state, animal in csv.reader(file):\n",
+    "    if len(animal)>len(winner):\n",
+    "        winner=animal\n",
+    "        winstate=state\n",
+    "print (winner) \n",
+    "print (winstate)\n"
    ]
   },
   {
@@ -156,24 +250,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "checks": "",
     "exercise_number": 6,
     "expected": "Ohio\nNorth Carolina\n"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "<IPython.core.display.HTML object>",
+      "text/html": "<pre>Ohio\nNorth Carolina\n\n<span class=\"ansi-green-fg\" style=\"color: #4f4\">┌────────────────────────────────────────────┐\n│ </span><span class=\"ansi-green-fg\" style=\"color: #4f4\">✔ Your output looks correct</span><span class=\"ansi-green-fg\" style=\"color: #4f4\">                │\n│                                            │\n│ Good job! You have completed this exercise │\n└────────────────────────────────────────────┘</span>\n</pre>"
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
    "source": [
     "# Exercise 6\n",
-    "\n"
+    "import csv\n",
+    "big=''\n",
+    "small='xxxxxxxxxXXXXXXXXXXxxxxxx'\n",
+    "file = open('Data/state-animals.csv')\n",
+    "for state, animal in csv.reader(file):\n",
+    "    if len(state)>len(big):\n",
+    "        big=state\n",
+    "    if len(state)<len(small):\n",
+    "        small=state\n",
+    "print (small)\n",
+    "print (big)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.2 64-bit",
    "language": "python",
-   "name": "python3"
+   "name": "python_defaultSpec_1600467767632"
   },
   "language_info": {
    "codemirror_mode": {
@@ -185,7 +306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.2-final"
   }
  },
  "nbformat": 4,
