--- a/lesson-05.ipynb
+++ b/lesson-05.ipynb
@@ -21,9 +21,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "\u001b[32m┌─────────────────────┐\n│ Welcome to lesson 5 │\n└─────────────────────┘\u001b[0m"
+    }
+   ],
    "source": [
     "from course_engine import start_lesson\n",
     "start_lesson(5)\n"
@@ -48,16 +56,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "checks": "",
     "exercise_number": 1,
     "expected": "2080607\n"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "<IPython.core.display.HTML object>",
+      "text/html": "<pre>2080607\n\n<span class=\"ansi-green-fg\" style=\"color: #4f4\">┌────────────────────────────────────────────┐\n│ </span><span class=\"ansi-green-fg\" style=\"color: #4f4\">✔ Your output looks correct</span><span class=\"ansi-green-fg\" style=\"color: #4f4\">                │\n│                                            │\n│ Good job! You have completed this exercise │\n└────────────────────────────────────────────┘</span>\n</pre>"
+     },
+     "metadata": {},
+     "execution_count": 2
+    }
+   ],
    "source": [
     "# Exercise 1\n",
-    "\n"
+    "import csv\n",
+    "f = open('Data/movie-cast.csv')\n",
+    "n=0\n",
+    "for movie, rank, actor, character in csv.reader(f):\n",
+    "    n=n+1\n",
+    "print(n)"
    ]
   },
   {
@@ -73,16 +96,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "checks": "",
     "exercise_number": 2,
     "expected": "Alec Cawthorne\nEve (III) Channing\nJohn (II) Matthews\nLaurence Olivier\nMichael Caine\nTeddy Martin\n"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "<IPython.core.display.HTML object>",
+      "text/html": "<pre>Alec Cawthorne\nEve (III) Channing\nJohn (II) Matthews\nLaurence Olivier\nMichael Caine\nTeddy Martin\n\n<span class=\"ansi-green-fg\" style=\"color: #4f4\">┌────────────────────────────────────────────┐\n│ </span><span class=\"ansi-green-fg\" style=\"color: #4f4\">✔ Your output looks correct</span><span class=\"ansi-green-fg\" style=\"color: #4f4\">                │\n│                                            │\n│ Good job! You have completed this exercise │\n└────────────────────────────────────────────┘</span>\n</pre>"
+     },
+     "metadata": {},
+     "execution_count": 3
+    }
+   ],
    "source": [
     "# Exercise 2\n",
-    "\n"
+    "import csv\n",
+    "f = open('Data/movie-cast.csv')\n",
+    "cast=[]\n",
+    "for movie, rank, actor, character in csv.reader(f):\n",
+    "    if movie==\"Sleuth (1972)\":\n",
+    "        cast.append(actor)\n",
+    "cast.sort()\n",
+    "for actor in cast:\n",
+    "    print(actor)\n"
    ]
   },
   {
@@ -94,16 +135,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "checks": "",
     "exercise_number": 3,
     "expected": "Brigitte, Laura, Ursula, Monica, Raquel, Litz, Florinda, Barbara, Claudia, e Sofia le chiamo tutte... anima mia (1974)\n"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "<IPython.core.display.HTML object>",
+      "text/html": "<pre>Brigitte, Laura, Ursula, Monica, Raquel, Litz, Florinda, Barbara, Claudia, e Sofia le chiamo tutte... anima mia (1974)\n\n<span class=\"ansi-green-fg\" style=\"color: #4f4\">┌────────────────────────────────────────────┐\n│ </span><span class=\"ansi-green-fg\" style=\"color: #4f4\">✔ Your output looks correct</span><span class=\"ansi-green-fg\" style=\"color: #4f4\">                │\n│                                            │\n│ Good job! You have completed this exercise │\n└────────────────────────────────────────────┘</span>\n</pre>"
+     },
+     "metadata": {},
+     "execution_count": 4
+    }
+   ],
    "source": [
     "# Exercise 3\n",
-    "\n"
+    "import csv\n",
+    "f = open('Data/movie-cast.csv')\n",
+    "winner=''\n",
+    "for movie, rank, actor, character in csv.reader(f):\n",
+    "    if len(movie)>len(winner):\n",
+    "        winner=movie\n",
+    "print(winner)\n"
    ]
   },
   {
@@ -116,16 +173,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "checks": "",
     "exercise_number": 4,
     "expected": "42 (2013)\nBlack Panther (2018)\nCaptain America: Civil War (2016)\nDraft Day (2014)\nGet on Up (2014)\nGods of Egypt (2016)\nMessage from the King (2016)\nThe Express (2008)\nThe Kill Hole (2012)\n"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "<IPython.core.display.HTML object>",
+      "text/html": "<pre>42 (2013)\nBlack Panther (2018)\nCaptain America: Civil War (2016)\nDraft Day (2014)\nGet on Up (2014)\nGods of Egypt (2016)\nMessage from the King (2016)\nThe Express (2008)\nThe Kill Hole (2012)\n\n<span class=\"ansi-green-fg\" style=\"color: #4f4\">┌────────────────────────────────────────────┐\n│ </span><span class=\"ansi-green-fg\" style=\"color: #4f4\">✔ Your output looks correct</span><span class=\"ansi-green-fg\" style=\"color: #4f4\">                │\n│                                            │\n│ Good job! You have completed this exercise │\n└────────────────────────────────────────────┘</span>\n</pre>"
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
    "source": [
     "# Exercise 4\n",
-    "\n"
+    "import csv\n",
+    "movies=[]\n",
+    "f = open('Data/movie-cast.csv')\n",
+    "for movie, rank, actor, character in csv.reader(f):\n",
+    "    if actor=='Chadwick Boseman':\n",
+    "        movies.append(movie)\n",
+    "movies.sort()\n",
+    "for movie in movies:\n",
+    "    print (movie)\n"
    ]
   },
   {
@@ -138,16 +213,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "checks": "",
     "exercise_number": 5,
     "expected": "Black Panther/T'Challa\nBlack Panther/T'Challa\nFloyd Little\nJackie Robinson\nJacob King\nJames Brown\nLt. Samuel Drake\nThoth\nVontae Mack\n"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "<IPython.core.display.HTML object>",
+      "text/html": "<pre>Black Panther/T&#39;Challa\nBlack Panther/T&#39;Challa\nFloyd Little\nJackie Robinson\nJacob King\nJames Brown\nLt. Samuel Drake\nThoth\nVontae Mack\n\n<span class=\"ansi-green-fg\" style=\"color: #4f4\">┌────────────────────────────────────────────┐\n│ </span><span class=\"ansi-green-fg\" style=\"color: #4f4\">✔ Your output looks correct</span><span class=\"ansi-green-fg\" style=\"color: #4f4\">                │\n│                                            │\n│ Good job! You have completed this exercise │\n└────────────────────────────────────────────┘</span>\n</pre>"
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
    "source": [
     "# Exercise 5\n",
-    "\n"
+    "import csv\n",
+    "roles=[]\n",
+    "f = open('Data/movie-cast.csv')\n",
+    "for movie, rank, actor, character in csv.reader(f):\n",
+    "    if actor=='Chadwick Boseman':\n",
+    "        roles.append(character)\n",
+    "roles.sort()\n",
+    "for c in roles:\n",
+    "    print (c)\n"
    ]
   },
   {
@@ -160,16 +253,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "checks": "",
     "exercise_number": 6,
     "expected": "10 Endrathukulla (2015)\nA Fool's Paradise (2013)\nA View to a Kill (1985)\nAshakara (1991)\nBhajarangi (2013)\nCasino Royale (2006)\nDeemonid (2012)\nDiamonds Are Forever (1971)\nDie Another Day (2002)\nDr. No (1962)\nEpic Movie (2007)\nFrom Russia with Love (1963)\nGam gai (2002)\nGoldenEye (1995)\nGoldenrock (1999)\nGoldfinger (1964)\nLi san jiao wei zhen di yu men (1977)\nLicence to Kill (1989)\nLive and Let Die (1973)\nMoonraker (1979)\nNever Say Never Again (1983)\nOctopussy (1983)\nOn Her Majesty's Secret Service (1969)\nOutwitted (II) (1917)\nQuantum of Solace (2008)\nReflection of the Soul (2013)\nSkyfall (2012)\nSpectre (2015)\nThe Living Daylights (1987)\nThe Man with the Golden Gun (1974)\nThe Price of Loyalty (2008)\nThe Spy Who Loved Me (1977)\nThe World Is Not Enough (1999)\nThunderball (1965)\nTomorrow Never Dies (1997)\nYou Only Live Twice (1967)\n"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "<IPython.core.display.HTML object>",
+      "text/html": "<pre>10 Endrathukulla (2015)\nA Fool&#39;s Paradise (2013)\nA View to a Kill (1985)\nAshakara (1991)\nBhajarangi (2013)\nCasino Royale (2006)\nDeemonid (2012)\nDiamonds Are Forever (1971)\nDie Another Day (2002)\nDr. No (1962)\nEpic Movie (2007)\nFrom Russia with Love (1963)\nGam gai (2002)\nGoldenEye (1995)\nGoldenrock (1999)\nGoldfinger (1964)\nLi san jiao wei zhen di yu men (1977)\nLicence to Kill (1989)\nLive and Let Die (1973)\nMoonraker (1979)\nNever Say Never Again (1983)\nOctopussy (1983)\nOn Her Majesty&#39;s Secret Service (1969)\nOutwitted (II) (1917)\nQuantum of Solace (2008)\nReflection of the Soul (2013)\nSkyfall (2012)\nSpectre (2015)\nThe Living Daylights (1987)\nThe Man with the Golden Gun (1974)\nThe Price of Loyalty (2008)\nThe Spy Who Loved Me (1977)\nThe World Is Not Enough (1999)\nThunderball (1965)\nTomorrow Never Dies (1997)\nYou Only Live Twice (1967)\n\n<span class=\"ansi-green-fg\" style=\"color: #4f4\">┌────────────────────────────────────────────┐\n│ </span><span class=\"ansi-green-fg\" style=\"color: #4f4\">✔ Your output looks correct</span><span class=\"ansi-green-fg\" style=\"color: #4f4\">                │\n│                                            │\n│ Good job! You have completed this exercise │\n└────────────────────────────────────────────┘</span>\n</pre>"
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
    "source": [
     "# Exercise 6\n",
-    "\n"
+    "import csv\n",
+    "film=[]\n",
+    "f = open('Data/movie-cast.csv')\n",
+    "for movie, rank, actor, character in csv.reader(f):\n",
+    "    if character=='James Bond':\n",
+    "        film.append(movie)\n",
+    "film.sort()\n",
+    "for c in film:\n",
+    "    print (c)\n"
    ]
   },
   {
@@ -182,16 +293,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "checks": "",
     "exercise_number": 7,
-    "expected": "Altha Carter\nAnna/Sarah Woodruff\nAnne Marie\nAunt Josephine\nBlue Mecha\nBrooke Reynolds\nChief Elder\nClara\nClarissa Vaughan\nCorrine Whitman\nDonna\nDr. Carolyn Ryan\nEleanor Shaw\nEmmeline Pankhurst\nFlorence Foster Jenkins\nFrancesca Johnson\nGail Hartman\nHelen\nJane Adler\nJanine Roth\nJill\nJoanna Kramer\nJoanna Silver\nJulia\nJulia Child\nKaren\nKaren Silkwood\nKaren Traynor\nKate Gulden\nKate Mundy\nKay\nKay Graham\nLee\nLila Ross\nLinda\nLindy\nLisa Metzger\nMargaret Thatcher\nMary Fisher\nMiranda Priestly\nMolly Gilmore\nMrs. Fox\nQueen\nRachel\nRicki\nRoberta Guaspari\nSister Aloysius Beauvier\nSophie\nStage 6\nSusan\nSusan Orlean\nSuzanne Vale\nViolet Weston\nWitch\nYolanda Johnson\n"
+    "expected": "Altha Carter\nAnna/Sarah Woodruff\nAnne Marie\nAunt Josephine\nBlue Mecha\nBrooke Reynolds\nChief Elder\nClara\nClarissa Vaughan\nCorrine Whitman\nDonna\nDr. Carolyn Ryan\nEleanor Shaw\nEmmeline Pankhurst\nFlorence Foster Jenkins\nFrancesca Johnson\nGail Hartman\nHelen\nJane Adler\nJanine Roth\nJill\nJoanna Kramer\nJoanna Silver\nJulia\nJulia Child\nKaren\nKaren Silkwood\nKaren Traynor\nKate Gulden\nKate Mundy\nKay\nKay Graham\nLee\nLila Ross\nLinda\nLindy\nLisa Metzger\nMargaret Thatcher\nMary Fisher\nMiranda Priestly\nMolly Gilmore\nMrs. Fox\nQueen\nRachel\nRicki\nRoberta Guaspari\nSister Aloysius Beauvier\nSophie\nStage 6\nSusan\nSusan Orlean\nSuzanne Vale\nViolet Weston\nWitch\nYolanda Johnson\n",
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "<IPython.core.display.HTML object>",
+      "text/html": "<pre>Altha Carter\nAnna/Sarah Woodruff\nAnne Marie\nAunt Josephine\nBlue Mecha\nBrooke Reynolds\nChief Elder\nClara\nClarissa Vaughan\nCorrine Whitman\nDonna\nDr. Carolyn Ryan\nEleanor Shaw\nEmmeline Pankhurst\nFlorence Foster Jenkins\nFrancesca Johnson\nGail Hartman\nHelen\nJane Adler\nJanine Roth\nJill\nJoanna Kramer\nJoanna Silver\nJulia\nJulia Child\nKaren\nKaren Silkwood\nKaren Traynor\nKate Gulden\nKate Mundy\nKay\nKay Graham\nLee\nLila Ross\nLinda\nLindy\nLisa Metzger\nMargaret Thatcher\nMary Fisher\nMiranda Priestly\nMolly Gilmore\nMrs. Fox\nQueen\nRachel\nRicki\nRoberta Guaspari\nSister Aloysius Beauvier\nSophie\nStage 6\nSusan\nSusan Orlean\nSuzanne Vale\nViolet Weston\nWitch\nYolanda Johnson\n\n<span class=\"ansi-green-fg\" style=\"color: #4f4\">┌────────────────────────────────────────────┐\n│ </span><span class=\"ansi-green-fg\" style=\"color: #4f4\">✔ Your output looks correct</span><span class=\"ansi-green-fg\" style=\"color: #4f4\">                │\n│                                            │\n│ Good job! You have completed this exercise │\n└────────────────────────────────────────────┘</span>\n</pre>"
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
    "source": [
     "# Exercise 7\n",
-    "\n"
+    "import csv\n",
+    "roles=[]\n",
+    "f = open('Data/movie-cast.csv')\n",
+    "for movie, rank, actor, character in csv.reader(f):\n",
+    "    if actor=='Meryl Streep':\n",
+    "        roles.append(character)\n",
+    "roles.sort()\n",
+    "for c in roles:\n",
+    "    print (c)\n"
    ]
   },
   {
@@ -206,16 +336,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "checks": "",
     "exercise_number": 8,
     "expected": "51\n55\nMeryl Streep\n"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "<IPython.core.display.HTML object>",
+      "text/html": "<pre>51\n55\nMeryl Streep\n\n<span class=\"ansi-green-fg\" style=\"color: #4f4\">┌────────────────────────────────────────────┐\n│ </span><span class=\"ansi-green-fg\" style=\"color: #4f4\">✔ Your output looks correct</span><span class=\"ansi-green-fg\" style=\"color: #4f4\">                │\n│                                            │\n│ Good job! You have completed this exercise │\n└────────────────────────────────────────────┘</span>\n</pre>"
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ],
    "source": [
     "# Exercise 8\n",
-    "\n"
+    "import csv\n",
+    "JD=0\n",
+    "MS=0\n",
+    "f = open('Data/movie-cast.csv')\n",
+    "for movie, rank, actor, character in csv.reader(f):\n",
+    "    if actor=='Judi Dench':\n",
+    "        JD=JD+1\n",
+    "    if actor=='Meryl Streep':\n",
+    "        MS=MS+1\n",
+    "print(JD)\n",
+    "print(MS)\n",
+    "if JD>MS:\n",
+    "    print('Judi Dench')\n",
+    "if JD<MS:\n",
+    "    print('Meryl Streep')\n"
    ]
   },
   {
@@ -238,15 +392,24 @@
    "outputs": [],
    "source": [
     "# Exercise 9\n",
-    "\n"
+    "import csv\n",
+    "w=''\n",
+    "cv=[]\n",
+    "f = open('Data/movie-cast.csv')\n",
+    "for movie, rank, actor, character in csv.reader(f):\n",
+    "    if actor=='Chadwick Boseman':\n",
+    "        roles.append(character)\n",
+    "roles.sort()\n",
+    "for c in roles:\n",
+    "    print (c)\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.2 64-bit",
    "language": "python",
-   "name": "python3"
+   "name": "python_defaultSpec_1600706315033"
   },
   "language_info": {
    "codemirror_mode": {
@@ -258,7 +421,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.2-final"
   }
  },
  "nbformat": 4,
