Finished  6, progress on 5.9

--- a/lesson-05.ipynb
+++ b/lesson-05.ipynb
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "checks": "",
     "exercise_number": 8,
@@ -350,7 +350,7 @@
       "text/html": "<pre>51\n55\nMeryl Streep\n\n<span class=\"ansi-green-fg\" style=\"color: #4f4\">┌────────────────────────────────────────────┐\n│ </span><span class=\"ansi-green-fg\" style=\"color: #4f4\">✔ Your output looks correct</span><span class=\"ansi-green-fg\" style=\"color: #4f4\">                │\n│                                            │\n│ Good job! You have completed this exercise │\n└────────────────────────────────────────────┘</span>\n</pre>"
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 7
     }
    ],
    "source": [
@@ -368,7 +368,7 @@
     "print(MS)\n",
     "if JD>MS:\n",
     "    print('Judi Dench')\n",
-    "if JD<MS:\n",
+    "else:\n",
     "    print('Meryl Streep')\n"
    ]
   },
@@ -383,33 +383,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "checks": "",
     "exercise_number": 9,
-    "expected": "42 (2013)\n114\n"
+    "expected": "42 (2013)\n114\n",
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "<IPython.core.display.HTML object>",
+      "text/html": "<pre><span class=\"ansi-red-intense-fg ansi-bold\" style=\"color: red;font-weight: bold\">Black Panther</span> (201<span class=\"ansi-red-intense-fg ansi-bold\" style=\"color: red;font-weight: bold\">8</span>)\n<span class=\"ansi-red-intense-fg ansi-bold\" style=\"color: red;font-weight: bold\">22</span>\n\n<span class=\"ansi-red-fg\" style=\"color: red\">┌──────────────────────────────────┐\n│ Your output does not quite match │\n│ what the exercise is expecting:  │\n└──────────────────────────────────┘</span>\n<span class=\"ansi-green-intense-fg ansi-bold\" style=\"color: #4f4;font-weight: bold\">42</span> (201<span class=\"ansi-green-intense-fg ansi-bold\" style=\"color: #4f4;font-weight: bold\">3</span>)\n<span class=\"ansi-green-intense-fg ansi-bold\" style=\"color: #4f4;font-weight: bold\">114</span>\n\n</pre>"
+     },
+     "metadata": {},
+     "execution_count": 2
+    }
+   ],
    "source": [
     "# Exercise 9\n",
-    "import csv\n",
+    "# mc=movie_count\n",
+    "mc={}\n",
     "w=''\n",
     "cv=[]\n",
+    "count=0\n",
+    "candidate=''\n",
     "f = open('Data/movie-cast.csv')\n",
+    "\n",
+    "#Read the csv\n",
+    "import csv\n",
     "for movie, rank, actor, character in csv.reader(f):\n",
     "    if actor=='Chadwick Boseman':\n",
-    "        roles.append(character)\n",
-    "roles.sort()\n",
-    "for c in roles:\n",
-    "    print (c)\n"
+    "        candidate=movie\n",
+    "        # print (candidate)\n",
+    "        for movie, rank, actor, character in csv.reader(f):\n",
+    "            if movie==candidate:\n",
+    "                cv.append(candidate)\n",
+    "        # print (candidate)\n",
+    "\n",
+    "        ### HERE'S THE PROBLEM: It was appending the correct movies, but  only once. \n",
+    "        ### Now it correctly appends all of the Black Panthers, but that's it\n",
+    "        # print (cv)\n",
+    "    # mc[film]=1\n",
+    "\n",
+    "#sort the list cv\n",
+    "cv.sort()\n",
+    "# print (cv)\n",
+    "       \n",
+    "#Adding the counts to the dictionary\n",
+    "for movie in cv:\n",
+    "    if movie in mc:\n",
+    "        # print (movie)\n",
+    "        mc[movie]=mc[movie]+1\n",
+    "    else:\n",
+    "        mc[movie]=1\n",
+    "# mc['Black Panther (2018)']=mc['Black Panther (2018)']+1\n",
+    "# print(cv)\n",
+    "# print(mc)\n",
+    "\n",
+    "#finding winner\n",
+    "for film, qty in mc.items():\n",
+    "    if qty>count:\n",
+    "        w=film\n",
+    "        count=qty\n",
+    "        # print(w)\n",
+    "        # print(qty)\n",
+    "\n",
+    "#print the winner and it's count\n",
+    "print(w)\n",
+    "print(count)\n",
+    "        \n",
+    "\n",
+    "# cv.sort()\n",
+    "# for c in cv:\n",
+    "#     print (c)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "['a', 'c', 'a']\n\n┌───────────────────────────────────────────────┐\n│ Note: without an “# Exercise” number comment, │\n│ a cell cannot be given specific feedback.     │\n└───────────────────────────────────────────────┘\n"
+    }
+   ],
+   "source": [
+    "a=['a', 'c']\n",
+    "a.append('a')\n",
+    "print(a)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
+   "name": "Python 3.8.2 64-bit",
    "display_name": "Python 3.8.2 64-bit",
-   "language": "python",
-   "name": "python_defaultSpec_1600706315033"
+   "metadata": {
+    "interpreter": {
+     "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    }
+   }
   },
   "language_info": {
    "codemirror_mode": {
