--- a/lesson-06.ipynb
+++ b/lesson-06.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {
     "checks": "",
     "exercise_number": 6,
@@ -242,7 +242,7 @@
       "text/html": "<pre>{&#39;Ohio&#39;: &#39;White-tailed deer&#39;, &#39;Oklahoma&#39;: &#39;Bison&#39;, &#39;Oregon&#39;: &#39;Beaver&#39;}\n\n<span class=\"ansi-green-fg\" style=\"color: #4f4\">┌────────────────────────────────────────────┐\n│ </span><span class=\"ansi-green-fg\" style=\"color: #4f4\">✔ Your output looks correct</span><span class=\"ansi-green-fg\" style=\"color: #4f4\">                │\n│                                            │\n│ Good job! You have completed this exercise │\n└────────────────────────────────────────────┘</span>\n</pre>"
      },
      "metadata": {},
-     "execution_count": 40
+     "execution_count": 13
     }
    ],
    "source": [
@@ -269,24 +269,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "checks": "",
     "exercise_number": 7,
     "expected": "{'Bison': 2, 'Moose': 1, 'Orca': 1}\n"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "<IPython.core.display.HTML object>",
+      "text/html": "<pre>{&#39;Bison&#39;: 2, &#39;Moose&#39;: 1, &#39;Orca&#39;: 1}\n\n<span class=\"ansi-green-fg\" style=\"color: #4f4\">┌────────────────────────────────────────────┐\n│ </span><span class=\"ansi-green-fg\" style=\"color: #4f4\">✔ Your output looks correct</span><span class=\"ansi-green-fg\" style=\"color: #4f4\">                │\n│                                            │\n│ Good job! You have completed this exercise │\n└────────────────────────────────────────────┘</span>\n</pre>"
+     },
+     "metadata": {},
+     "execution_count": 22
+    }
+   ],
    "source": [
     "# Exercise 7\n",
     "\n",
     "animals = ['Bison', 'Moose', 'Orca', 'Bison']\n",
     "counts = {'Bison': 0, 'Moose': 0, 'Orca': 0}\n",
     "# Put “for” loop here\n",
-    "import csv\n",
-    "for state, animal in csv.reader(open('Data/state-animals.csv')):\n",
-    "    if animals\n",
-    "#for each list item, add to the count: ??value+1??\n",
-    "print(counts)"
+    "for critter in animals:\n",
+    "    counts[critter]=counts[critter]+1\n",
+    "print(counts)\n"
    ]
   },
   {
@@ -315,19 +323,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "checks": "",
     "exercise_number": 8,
     "expected": "{'Bison': 2, 'Moose': 1, 'Orca': 1}\n"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "<IPython.core.display.HTML object>",
+      "text/html": "<pre>{&#39;Bison&#39;: 2, &#39;Moose&#39;: 1, &#39;Orca&#39;: 1}\n\n<span class=\"ansi-green-fg\" style=\"color: #4f4\">┌────────────────────────────────────────────┐\n│ </span><span class=\"ansi-green-fg\" style=\"color: #4f4\">✔ Your output looks correct</span><span class=\"ansi-green-fg\" style=\"color: #4f4\">                │\n│                                            │\n│ Good job! You have completed this exercise │\n└────────────────────────────────────────────┘</span>\n</pre>"
+     },
+     "metadata": {},
+     "execution_count": 24
+    }
+   ],
    "source": [
     "# Exercise 8\n",
     "\n",
     "animals = ['Bison', 'Moose', 'Orca', 'Bison']\n",
     "counts = {}\n",
     "# Put “for” loop here\n",
+    "for critter in animals:\n",
+    "    if critter in counts:\n",
+    "        counts[critter]=counts[critter]+1\n",
+    "    else:\n",
+    "        counts[critter]=1\n",
     "print(counts)"
    ]
   },
@@ -342,18 +365,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {
     "checks": "",
     "exercise_number": 9,
     "expected": "Bison\n"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "<IPython.core.display.HTML object>",
+      "text/html": "<pre>Bison\n\n<span class=\"ansi-green-fg\" style=\"color: #4f4\">┌────────────────────────────────────────────┐\n│ </span><span class=\"ansi-green-fg\" style=\"color: #4f4\">✔ Your output looks correct</span><span class=\"ansi-green-fg\" style=\"color: #4f4\">                │\n│                                            │\n│ Good job! You have completed this exercise │\n└────────────────────────────────────────────┘</span>\n</pre>"
+     },
+     "metadata": {},
+     "execution_count": 66
+    }
+   ],
    "source": [
     "# Exercise 9\n",
     "\n",
     "counts = {'Bison': 2, 'Moose': 1, 'Orca': 1}\n",
-    "# Put your code here."
+    "# Put your code here.\n",
+    "\n",
+    "winner=''\n",
+    "count=0\n",
+    "\n",
+    "for critter, qty in counts.items():\n",
+    "    #print(f'{winner} has {qty}')\n",
+    "    # print (critter)\n",
+    "    # print(qty)\n",
+    "    # print(count)\n",
+    "    if qty>count:\n",
+    "        winner=critter\n",
+    "    count=qty\n",
+    "print (winner)"
    ]
   },
   {
@@ -369,24 +415,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {
     "checks": "",
     "exercise_number": 10,
     "expected": "White-tailed deer 10\n"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "<IPython.core.display.HTML object>",
+      "text/html": "<pre>White-tailed deer 10\n\n<span class=\"ansi-green-fg\" style=\"color: #4f4\">┌────────────────────────────────────────────┐\n│ </span><span class=\"ansi-green-fg\" style=\"color: #4f4\">✔ Your output looks correct</span><span class=\"ansi-green-fg\" style=\"color: #4f4\">                │\n│                                            │\n│ Good job! You have completed this exercise │\n└────────────────────────────────────────────┘</span>\n</pre>"
+     },
+     "metadata": {},
+     "execution_count": 72
+    }
+   ],
    "source": [
     "# Exercise 10\n",
-    "\n"
+    "c = {}\n",
+    "sorting=[]\n",
+    "winner=''\n",
+    "count=0\n",
+    "\n",
+    "#read the csv \n",
+    "import csv\n",
+    "for state, animal in csv.reader(open('Data/state-animals.csv')):\n",
+    "    sorting.append(animal)\n",
+    "\n",
+    "#sort the list\n",
+    "sorting.sort()\n",
+    "\n",
+    "#adding counts to dictionary\n",
+    "for critter in sorting:\n",
+    "    if critter in c:\n",
+    "        c[critter]=c[critter]+1\n",
+    "    else:\n",
+    "        c[critter]=1\n",
+    "\n",
+    "# print (c)\n",
+    "\n",
+    "#Find the winner\n",
+    "for critter, qty in c.items():\n",
+    "    if qty>count:\n",
+    "        winner=critter\n",
+    "    count=qty\n",
+    "print (f'{winner} {count}')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
+   "name": "Python 3.8.2 64-bit",
    "display_name": "Python 3.8.2 64-bit",
-   "language": "python",
-   "name": "python_defaultSpec_1600875503580"
+   "metadata": {
+    "interpreter": {
+     "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    }
+   }
   },
   "language_info": {
    "codemirror_mode": {
